# lms-backend

./: .env.example  .flake8  .gitignore  README.md  coverage.txt  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py  views_subscriptions.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_course_last_notification_sent_at_alter_course_id_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json  payments.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_managers.py  0004_alter_payment_options_remove_payment_course_and_more.py  0005_payment_payment_url_payment_stripe_price_id_and_more.py  0006_alter_payment_payment_url.py  0007_alter_payment_id_alter_user_id.py  0008_add_deactivate_inactive_users_periodic_task.py
users/services/: stripe.py
